<resources>
    <string name="app_name">Movies</string>
    <string name="sample_summary">After the death of his father, the King of Wakanda, T\'Challa returns home to the isolated, technologically advanced African nation to succeed to the throne and take his rightful place as king.</string>
    <string name="sample_title">Black Panther</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="released">Released:</string>
    <string name="overview">Overview:</string>
    <string name="coroutines_fragment">Open Coroutines Fragment</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done!</string>
    <string name="task_created">Task Created</string>
    <string name="click_create">must click \'create\' first</string>
    <string name="no_task">there is no task running</string>
    <string name="status_image">Status image</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="background_service_fragment">Open Background Service Fragment</string>
    <string name="progress">Progress:</string>
    <string name="start_service">Start Service</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="percent">%d percent</string>
</resources>