<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6AB3D6"
    tools:context=".coroutines.CoroutinesFragment">

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintEnd_toStartOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCreate"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toEndOf="@+id/btnCreate" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStart" />

    <TextView
        android:id="@+id/txtvTitle"
        android:text="@string/coroutines_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        style="@style/TitleStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>